# SyndicateQT

./: .gitattributes  .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL  Makefile.am  README.md  Syndicate.pro  autogen.sh  compile-all-OS-signed.sh  configure.ac  libsyndicateconsensus.pc.in
.tx/: config
build-aux/m4/: ax_boost_base.m4  bitcoin_qt.m4  syndicate_find_bdb48.m4  syndicate_qt.m4  syndicate_subdir_to_include.m4
contrib/: README.md  gitian-build.sh  install_db4.sh  syndicate-cli.bash-completion  syndicate-qt.pro  syndicate-tx.bash-completion  syndicated.bash-completion  tidy_datadir.sh  valgrind.supp  walle-qt.pro  walled.bash-completion
contrib/bitrpc/: bitrpc.py
contrib/debian/: README.md  changelog  control  copyright  rules  syndicate-qt.desktop  syndicate-qt.install  syndicate-tx.bash-completion  syndicate-tx.install  syndicate-tx.manpages  syndicated.bash-completion  syndicated.install  syndicated.manpages  walle-qt.desktop  walle-qt.install  walle-qt.lintian-overrides  walle-qt.protocol  walled.bash-completion  walled.examples  walled.install  watch  (+2 more)
depends/: Makefile  README.md  description.md
doc/: Doxyfile.in  README.md  README_osx.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  guide-startmany.md  init.md  masternode-budget.md  masternode_conf.md  multiwallet-qt.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  swifttx.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.md  unit-tests.md  zmq.md
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.leveldb.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  accumulatormap.cpp  accumulatormap.h  accumulators.cpp  accumulators.h  activemasternode.cpp  activemasternode.h  addrman.cpp  addrman.h  alert.cpp  allocators.h  amount.cpp  amount.h  arith_uint256.h  base58.cpp  base58.h  bip38.cpp  bip38.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  (+132 more)
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h
src/crypto/: common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/libzerocoin/: Denominations.cpp  Denominations.h
src/policy/: feerate.cpp  feerate.h  policy.cpp  policy.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h  zerocoin.cpp  zerocoin.h
src/qt/: addeditadrenalinenode.cpp  addeditatomnode.cpp  addressbookpage.cpp  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  bitcoin.cpp  bitcoin.qrc  bitcoinaddressvalidator.cpp  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinunits.cpp  bitcoinunits.h  blockbrowser.cpp  blockexplorer.cpp  clientmodel.h  coincontroldialog.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  macdockiconhandler.h  macnotificationhandler.mm  masternodemanager.cpp  messagemodel.cpp  multisigaddressentry.cpp  multisigdialog.cpp  multisiginputentry.cpp  notificator.cpp  notificator.h  obfuscationconfig.cpp  openuridialog.cpp  optionsdialog.cpp  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  (+50 more)
src/qt/forms/: aboutdialog.ui  addeditadrenalinenode.ui  addeditatomnode.ui  addressbookpage.ui  atomnodeconfigdialog.ui  bip38tooldialog.ui  blockexplorer.ui  coincontroldialog.ui  editaddressdialog.ui  helpmessagedialog.ui  intro.ui  masternodemanager.ui  messagepage.ui  multisenddialog.ui  multisigaddressentry.ui  multisigdialog.ui  multisiginputentry.ui  optionsdialog.ui  overviewpage.ui  privacydialog.ui  qrcodedialog.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui  stashedsendconfig.ui  tradingdialog.ui
src/qt/locale/: bitcoin_de.qm  bitcoin_de.ts  syndicate_af_ZA.ts  syndicate_ar.ts  syndicate_be_BY.ts  syndicate_bg.ts  syndicate_ca.ts  syndicate_ca_ES.ts  syndicate_cs.ts  syndicate_cy.ts  syndicate_da.ts  syndicate_de.ts  syndicate_el_GR.ts  syndicate_en.ts  syndicate_en_US.ts  syndicate_eo.ts  syndicate_es.ts  syndicate_es_CL.ts  syndicate_es_DO.ts  syndicate_es_MX.ts  syndicate_es_UY.ts  syndicate_et.ts  syndicate_eu_ES.ts  syndicate_fa.ts  syndicate_fa_IR.ts  syndicate_fi.ts  syndicate_fr.ts  syndicate_fr_CA.ts  syndicate_fr_FR.ts  syndicate_gl.ts  syndicate_he.ts  syndicate_hi_IN.ts  syndicate_hr.ts  syndicate_hu.ts  syndicate_id_ID.ts  syndicate_it.ts  syndicate_ja.ts  syndicate_ka.ts  syndicate_kk_KZ.ts  syndicate_ko_KR.ts  (+51 more)
src/qt/res/: syndicate-qt-res.rc  syndicate-qt.rc  walle-qt-res.rc
src/qt/res/css/: default.css
src/qt/res/icons/: bitcoin.icns  syndicate.icns
src/qt/test/: test_main.cpp  uritests.cpp
src/script/: bitcoinconsensus.h  interpreter.h  ismine.cpp  ismine.h  script.h  script_error.h  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  autogen.sh  libsecp256k1.pc.in
src/secp256k1/src/: tests.c
src/secp256k1/src/java/: org_syndicate_NativeSecp256k1.c  org_syndicate_NativeSecp256k1.h
src/secp256k1/src/java/org/syndicate/: NativeSecp256k1.java
src/support/: cleanse.h
src/test/: README.md  base32_tests.cpp  base58_tests.cpp  key_tests.cpp  main_tests.cpp  netbase_tests.cpp  scheduler_tests.cpp  serialize_tests.cpp  test_syndicate.cpp  test_walle.cpp  torcontrol_tests.cpp  zerocoin_denomination_tests.cpp  zerocoin_implementation_tests.cpp  zerocoin_transactions_tests.cpp
src/test/data/: bitcoin-util-test.json  sighash.json  tx_invalid.json  tx_valid.json
src/zmq/: zmqconfig.h
test/: README.md  config.ini.in
(+219 files in other folders)
